src/main/resources/assets/css/background-sync.less
@breakpoint_desktop: 1025px;
/* TODO-APP*/

#todo-app__container {
    position: absolute;
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    top: 10vh;
    right: 4vw;
    left: 4vw;
}

#todo-app__input {
    display: flex;
    flex-basis: 100%;
    justify-content: space-between;
    /*margin-bottom: 2vh;*/
}

#add-todo-text {
    width: 150%;
    font-size: 1.1em;
}

#add-todo-button {
    border: solid #3F51B5;
    bottom: 1vh;
}

.mdl-textfield {
    width: 100% !important;
    padding: 0 !important;
    margin: 0 !important;
    font-size: 2em !important;
}

.mdl-textfield .mdl-textfield__input {
    width: 90% !important;
}

.mdl-textfield__input:focus {
    outline: none !important;
    border-bottom-width: 3px;
    border-bottom-color: #3F51B5;
    /*margin-bottom: 2px; */
}

.todo-app__item {
    position: relative;
    padding: 15px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    overflow-wrap: break-word;
}

.todo-app__textfield,
.mdl-textfield__input {
    text-align: left !important;
    /*margin-left: 2vw !important;*/
}

@media (min-width: @breakpoint_desktop) {
    #todo-app__container {
        width: 70vw;
        top: 20vh;
        margin: auto;
    }
    #todo-app__input {
        position: relative;
        width: 70vw;
        margin-bottom: 6vh;
    }
    #todo-app__input>* {
        font-size: 1.2em;
    }
    #add-todo-text {
        font-size: 2em;
        width: 40vw;
    }
    .todo-app__item>i {
        width: 1em;
    }
    .todo-app__inputfield {
        height: 20px !important;
    }
    .todo-app__inputfield:focus {
        margin-left: .55vw !important;
        margin-right: .55vw !important;
    }
    .mdl-textfield__input {
        font-size: 1em !important;
        padding: 0 0 !important;
        margin: 0 !important;
    }
    .todo-app__checkbox:hover,
    .todo-app__textfield:hover,
    .remove-todo-button:hover {
        cursor: pointer;
    }
    .remove-todo-button {
        margin-right: 5vw !important;
        margin-left: 2vw !important;
    }
    .remove-todo-button,
    .todo-app__synced-icon {
        font-size: 20px;
    }
}

